2023-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Add a FIXME comment for a bug yet
	to be fixed.

	* PerlMagick/t/png/read.t: Add a test case for BMP with embedded
	PNG.  Something is still wrong given that reading using PerlMagick
	is returning two frames rather than one.

	* magick/pixel_cache.c: Update documentation to reflect that
	GetImagePixels() has been deprecated since 2008, and update
	mention of it to document use of AccessMutableIndexes() or
	AccessImmutableIndexes().

	* coders/pnm.c (ReadPNMImage): Add traces prior to each decoding
	loop to identify the sub-format being decoded.

	* coders/bmp.c (ExtractNestedBlob): Pass pointer to image list to
	satisfy requirements of AppendImageToList() and
	DeleteImageFromList().

2023-10-02  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Attempt to read BMP with 48bpp.

	Use more aggresive image rewind algorithm pasted from mat.c

2023-10-01  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Fix BMP 64bpp reader. See this URL:
	https://stackoverflow.com/questions/20778227/get-64bpp-image-color

2023-09-30  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Attempt to read BMP with 64bpp.

	* coders/bmp.c: Remove code duplicity. 1bpp, 2bpp and 4bpp is
	using a same code.

2023-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (StoreAlienBlob): Fix compilation warning in log
	statement.

2023-09-28  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/png/input_PNG.bmp: Add a BMP sample with BI_PNG
	compression.

2023-09-27  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Writer for BI_PNG compression.

2023-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh : Updates for the 1.3.42 release.

	* NEWS.txt: Update the news for the 1.3.42 release.

	* VisualMagick/installer/redist/VC2013/note.txt: Add note about
	where to get Visual Studio 2013 redistributables.  File also